Fixed contribution link

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,1 +1,11 @@
-{}
+{
+  "settings": {
+    "hostname": "Hostname/IP address",
+    "port": "Port",
+    "username": "username",
+    "password": "password",
+    "save": "save",
+    "refresh": "refresh",
+    "remove": "clear"
+  }
+}
